syntax = "proto3";

package trending;

service TrendingService {
  rpc GetTrendingPosts(GetTrendingPostsRequest) returns (TrendingPostsResponse);
  rpc GetTrendingProperties(GetTrendingPropertiesRequest) returns (TrendingPropertiesResponse);
  rpc GetTrendingLocations(GetTrendingLocationsRequest) returns (TrendingLocationsResponse);
}

message GetTrendingPostsRequest {
  int32 limit = 1;
  optional double latitude = 2;
  optional double longitude = 3;
  optional double radius_km = 4;
}

message GetTrendingPropertiesRequest {
  int32 limit = 1;
  optional string property_type = 2;
  optional double min_price = 3;
  optional double max_price = 4;
  optional double latitude = 5;
  optional double longitude = 6;
  optional double radius_km = 7;
}

message GetTrendingLocationsRequest {
  int32 limit = 1;
  optional double latitude = 2;
  optional double longitude = 3;
  optional double radius_km = 4;
}

message TrendingPostsResponse {
  repeated TrendingPost posts = 1;
}

message TrendingPropertiesResponse {
  repeated TrendingProperty properties = 1;
}

message TrendingLocationsResponse {
  repeated TrendingLocation locations = 1;
}

message TrendingPost {
  int32 id = 1;
  string content = 2;
  int32 user_id = 3;
  string user_name = 4;
  double latitude = 5;
  double longitude = 6;
  string location_name = 7;
  int32 likes_count = 8;
  int32 comments_count = 9;
  int32 engagement_score = 10;
  string created_at = 11;
}

message TrendingProperty {
  int32 id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string property_type = 5;
  double latitude = 6;
  double longitude = 7;
  string location_name = 8;
  int32 user_id = 9;
  string user_name = 10;
  int32 views_count = 11;
  int32 engagement_score = 12;
}

message TrendingLocation {
  string name = 1;
  double latitude = 2;
  double longitude = 3;
  int32 post_count = 4;
  int32 property_count = 5;
  int32 engagement_score = 6;
} 